[package]
name = "ui_layout_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
pollster = "0.4.0"
ui_layout = {
  git = "https://github.com/098orin/ui_layout-rs",
  rev = "c58a2648c8cc75d971e611827819103858ed4cef"
}
wgpu = "28.0.0"
winit = "0.30.12"
